fixer la docummentation swagger pour courses
